# distributed-quantum-services

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_REVIEW_REPORT.md  CONTEXT.md  DEPLOY-CORS-FIX.md  LICENSE  MANUAL.md  Makefile  OSV_ACTION_PLAN_DRAFT.md  OSV_FELLOWSHIP_PREP.md  OSV_FORM_DRAFT.md  OSV_FORM_SUBMISSION_DRAFT.md  PEER_CONNECTION_API.md  PRESENTATION_DECK.md  PRESENTATION_SCRIPT.md  README.md  README_OLD.md  USER_NODE_FILTERING_GUIDE.md  competitor-research-quantum-platform.md  compose.yaml  docker-compose.yaml  node-starter-template.py  postman.json  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  backend-migration.md  pyproject.toml  test_gradient_fix.py
backend/alembic/: env.py
backend/alembic/versions/: 838b0126c4fd_initial_platform_tables.py
backend/config/: config.example.yaml
backend/data/: quantum_coordinator.db
backend/scripts/: analyze_benchmark_results.py  benchmark_kenneth_french.py  benchmark_massive_dataset.py  convert_kenneth_french_portfolios.py  demo-start.sh  massive_dataset_benchmark_results.json  node_scaling_current_baseline.json  peer_scaling_results.json  run_damodaran_node_scaling.py  run_extended_damodaran_benchmark.py  run_node_scaling_benchmark.py  run_sp500_real_benchmark.py  run_time_period_analysis.py  test_benchmark_api.py  test_benchmark_direct.py
backend/src/quantum_backend_v2/: __init__.py  main.py  observability.py
backend/src/quantum_backend_v2/api/: __init__.py  app.py  benchmark.py
backend/src/quantum_backend_v2/application/: __init__.py  distributed_statevector.py  financial_comparison.py  quantum_bridge.py  risk_engine.py
backend/src/quantum_backend_v2/artifacts/: models.py
backend/src/quantum_backend_v2/bootstrap/: __init__.py  application.py  libp2p.py  persistence.py
backend/src/quantum_backend_v2/config/: __init__.py  loader.py  models.py
backend/src/quantum_backend_v2/discovery/: __init__.py  events.py  models.py  registry.py  service.py
backend/src/quantum_backend_v2/libp2p/: __init__.py  addressing.py  bootstrap.py  fragment_worker.py  models.py  peerstore.py  protocol_ids.py  pubsub.py  transport.py
backend/src/quantum_backend_v2/persistence/: __init__.py  catalog.py  local_log.py  models.py  mongodb.py  runtime.py
backend/src/quantum_backend_v2/pharma/: __init__.py  ansatz_factory.py  cache.py  config.py  dmet.py  models.py  orchestrator.py  qubo_builder.py  scaffold_hopper.py
backend/src/quantum_backend_v2/planning/: cost.py  parser.py
backend/src/quantum_backend_v2/protocols/: __init__.py  chunks.py  execution.py  models.py  packages.py  quality.py  reservation.py
backend/src/quantum_backend_v2/provenance/: __init__.py  models.py
backend/src/quantum_backend_v2/quality/: catalog.py  models.py
backend/src/quantum_backend_v2/reservations/: __init__.py  models.py  service.py
backend/src/quantum_backend_v2/runtime/: executor.py  (+3 more)
backend/tests/: conftest.py
backend/tests/integration/: test_financial_api_integration.py  test_job_api_integration.py  test_pharma_integration.py
backend/tests/unit/: test_config_loader.py  test_discovery_bootstrap.py  test_discovery_registry.py  test_discovery_service.py  test_distributed_execution.py  test_execution_service.py  test_financial_api.py  test_financial_summary_payload.py  test_health_endpoint.py  test_job_api_summary.py  test_libp2p_peerstore.py  test_package_manifests.py  test_package_signing.py  test_persistence.py  test_planning_dag.py  test_planning_parser.py  test_pylibp2p_fabric.py  test_service_registry.py
(+858 files in other folders)
