[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "quantum-backend"
version = "0.1.0"
description = "Backend v2 foundation for the decentralized quantum service network"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Quantum Libp2p Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.49",
  "asyncpg>=0.30.0",
  "greenlet>=3.2.4",
  "beanie>=1.27.0",
  "pymongo>=4.11.0",
  "pyyaml>=6.0.2",
  "structlog>=24.4.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "tomli>=2.0.1; python_version < '3.11'",
  "py-multicodec>=1.0.0",
  "libp2p @ https://github.com/libp2p/py-libp2p/archive/refs/heads/main.tar.gz",
  "alembic>=1.18.4",
  "python-multipart>=0.0.26",
  "qiskit>=1.2.0",
  "qiskit-aer>=0.15.0",
  "qiskit-algorithms>=0.3.0",
  "qiskit-finance>=0.4.0",
  "yfinance>=0.2.0",
  "scipy>=1.12.0",
  "numpy>=1.26.0",
  # Quantum pharma pipeline
  "pennylane>=0.42.0",
  "pennylane-qiskit>=0.42.0",
  "rdkit>=2024.03.6",
  "openfermion>=1.6.0",
  "openfermionpyscf>=0.5",
  "pyscf>=2.7.0",
  "torch>=2.4.0",
  "biopython>=1.84",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12.20250822",
]

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12.20250822",
]

[project.scripts]
quantum-backend = "quantum_backend_v2.main:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["tests"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
upgrade-package = ["libp2p"]

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_backend_v2"]
